tests/ui/cast_targets/postgres/fail/marker_target_mismatch.stderr
error[E0277]: the trait bound `Float8: CastTarget<'_, Int, drizzle_core::dialect::PostgresDialect>` is not satisfied
  --> tests/ui/cast_targets/postgres/fail/marker_target_mismatch.rs:13:63
   |
13 |     let _ = cast::<_, _, drizzle::core::types::Int>(user.age, drizzle::postgres::types::Float8);
   |             ---------------------------------------           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `CastTarget<'_, Int, drizzle_core::dialect::PostgresDialect>` is not implemented for `Float8`
   |             |
   |             required by a bound introduced by this call
   |
help: the trait `CastTarget<'_, Int, drizzle_core::dialect::PostgresDialect>` is not implemented for `Float8`
      but trait `CastTarget<'_, Double, drizzle_core::dialect::PostgresDialect>` is implemented for it
  --> core/src/expr/util.rs
   |
   | / impl<'a> CastTarget<'a, crate::types::Double, PostgresDialect>
   | |     for drizzle_types::postgres::types::Float8
   | |______________________________________________^
   = help: for that trait implementation, expected `Double`, found `Int`
note: required by a bound in `drizzle::core::expr::cast`
  --> core/src/expr/util.rs
   |
   | pub fn cast<'a, V, E, Target>(
   |        ---- required by a bound in this function
   |     expr: E,
   |     target_type: impl CastTarget<'a, Target, V::DialectMarker>,
   |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `cast`
